// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders default 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

<button
  className="c0"
/>
`;

exports[`<Button /> renders with theme 1`] = `
.c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
}

<button
  className="c0"
/>
`;

exports[`<ButtonMain /> renders default 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
  margin: auto;
  padding: 1rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  visibility: hidden;
}

<button
  className="Button-iu7iy2-0 c0"
/>
`;

exports[`<ButtonMain /> renders hidden 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
  margin: auto;
  padding: 1rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  visibility: hidden;
}

<Button__ButtonMain
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
  visible={false}
>
  <button
    className="Button-iu7iy2-0 c0"
  />
</Button__ButtonMain>
`;

exports[`<ButtonMain /> renders visible 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
  margin: auto;
  padding: 1rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  visibility: visible;
}

<Button__ButtonMain
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
  visible={true}
>
  <button
    className="Button-iu7iy2-0 c0"
  />
</Button__ButtonMain>
`;

exports[`<ButtonMain /> renders with theme 1`] = `
.c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
  margin: auto;
  padding: 1rem;
  box-shadow: none;
  visibility: hidden;
}

<button
  className="Button-iu7iy2-0 c0"
/>
`;

exports[`<ToggleSpan /> open/close 1`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  -webkit-transition: -webkit-transform 0.2s linear;
  -webkit-transition: transform 0.2s linear;
  transition: transform 0.2s linear;
}

<Button__ToggleSpan
  open={false}
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
>
  <span
    className="c0"
    open={false}
  />
</Button__ToggleSpan>
`;

exports[`<ToggleSpan /> renders default 1`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  -webkit-transition: -webkit-transform 0.2s linear;
  -webkit-transition: transform 0.2s linear;
  transition: transform 0.2s linear;
}

.c0:first-child {
  -webkit-transform: translateY(0.45rem) rotate(-45deg);
  -ms-transform: translateY(0.45rem) rotate(-45deg);
  transform: translateY(0.45rem) rotate(-45deg);
}

.c0:nth-child(2) {
  -webkit-transform: translateX(5rem);
  -ms-transform: translateX(5rem);
  transform: translateX(5rem);
}

.c0:last-child {
  -webkit-transform: translateY(-0.45rem) rotate(45deg);
  -ms-transform: translateY(-0.45rem) rotate(45deg);
  transform: translateY(-0.45rem) rotate(45deg);
}

<Button__ToggleSpan
  open={true}
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
>
  <span
    className="c0"
    open={true}
  />
</Button__ToggleSpan>
`;

exports[`<ToggleSpan /> renders with theme 1`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #fff;
  -webkit-transition: -webkit-transform 0.2s linear;
  -webkit-transition: transform 0.2s linear;
  transition: transform 0.2s linear;
}

.c0:first-child {
  -webkit-transform: translateY(0.45rem) rotate(-45deg);
  -ms-transform: translateY(0.45rem) rotate(-45deg);
  transform: translateY(0.45rem) rotate(-45deg);
}

.c0:nth-child(2) {
  -webkit-transform: translateX(5rem);
  -ms-transform: translateX(5rem);
  transform: translateX(5rem);
}

.c0:last-child {
  -webkit-transform: translateY(-0.45rem) rotate(45deg);
  -ms-transform: translateY(-0.45rem) rotate(45deg);
  transform: translateY(-0.45rem) rotate(45deg);
}

<Button__ToggleSpan
  open={true}
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <span
    className="c0"
    open={true}
  />
</Button__ToggleSpan>
`;

exports[`renders default <ButtonAdd /> 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
  margin: 0.5rem 0 0 0;
}

<button
  className="Button__ButtonIcon-iu7iy2-3 c0"
/>
`;

exports[`renders default <ButtonIcon /> 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
}

<button
  className="c0"
/>
`;

exports[`renders default <ButtonRemove /> 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
  margin-top: -0.6rem;
}

<button
  className="Button__ButtonIcon-iu7iy2-3 c0"
/>
`;

exports[`renders default <ButtonTheme /> 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  background: transparent;
}

@media screen and (min-width:40rem) {
  .c0 {
    margin: 0 1rem;
  }
}

<button
  className="Button-iu7iy2-0 c0"
/>
`;

exports[`renders default <MenuToggle /> 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
  margin: 0 1rem;
  padding: 0;
  background: transparent;
  overflow: hidden;
}

@media screen and (min-width:40rem) {
  .c0 {
    display: none;
  }
}

<button
  className="Button-iu7iy2-0 c0"
/>
`;
